simply call activity tests with listeners